--- a/style-home.css
+++ b/style-home.css
@@ -106,14 +106,7 @@ header {
   padding: 40px 0;
 }
 
-* {
-	border: 0;
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-}
-
-body, button, input {
+button, input {
 	font: 1em Hind, sans-serif;
 	line-height: 1.5em;
 }
