Color animation change
Trying to change the colors in the animation of the card while hover to try to obtain a better view.

--- a/style-home.css
+++ b/style-home.css
@@ -455,7 +455,9 @@ font-family: 'Poppins', sans-serif;
       #f4eed6,
       #d1e3cc,
       #cddfe3,
-      #cacee1);
+      #cacee1,
+			#9fa3d5,
+  		#efd7d4);
   position: absolute;
   top: -2px;
   left: -2px;
