--- a/style-home.css
+++ b/style-home.css
@@ -509,36 +509,20 @@ font-family: 'Poppins', sans-serif;
   border-radius: 10px;
 }
 .footer{
-background:#000;
-padding:30px 0px;
 font-family: 'Play', sans-serif;
 text-align:center;
-}
-
-.footer .row{
-width:100%;
-margin:1% 0%;
-padding:0.6% 0%;
-color:gray;
-font-size:0.8em;
-}
-
-.footer .row a{
-text-decoration:none;
-color:gray;
-transition:0.5s;
-}
-
-.footer .row a:hover{
-color:#fff;
-}
-
-.footer .row ul{
-width:100%;
-}
-
-.footer .row ul li{
-display:inline-block;
-margin:0px 30px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 2rem;
+  background: #1e2424;
+  color: #bbc0dd;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.2rem;
+  font-size: 14px;
 }
 
