--- a/style-home.css
+++ b/style-home.css
@@ -243,7 +243,16 @@ body {
 		color: #f1f1f1;
 	}
 	body {
-		background: #171717;
+			display: block;
+    background-color: #d2bbeb;
+    background-image: url(https://polymer-pokedex.firebaseapp.com/images/page-pokemons-detail-background.png), linear-gradient(#171717, #8a97ed);
+    animation: 3s linear infinite animate-background;
+    color: #ffffff;
+    text-align: center;
+    height: 100vh;
+    overflow-x: auto;
+    padding: 0 1.625em;
+    box-sizing: border-box;
 	}
 	.search-bar input {
 		box-shadow: 0 0 0 0.4em #f1f1f1 inset;
